# Arbitrary-Downloader

./: .gitignore  AGENTS.md  README.md  app.py  app.spec  config.json  config.py  database.py  downloader.py  ffmpeg_utils.py  main.py  pyproject.toml  run.sh  server.py
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-07-cross-platform-packaging.md
docs/superpowers/specs/: 2026-06-07-cross-platform-packaging-design.md
screens/: change_path_screen.py  download_screen.py  format_screen.py  input_screen.py
static/: app.js  index.html  style.css
