[project]
name = "yt-dlp-downloader"
version = "0.1.0"
description = "基于 yt-dlp 实现的音视频下载器"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "pywebview>=5.3.2",
    "uvicorn[standard]>=0.49.0",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
video-downloader = "main:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
